Reworked abut page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,12 @@
     <h1>Artem Szubowicz</h1>
     <h2>Software developer</h2>
 
-    <div class="col-md-7 col-md-offset-4 p-r-0">
+    <div class="col-md-4">
+      <span><span id="next-post-countdown" /></span>
+      <span>until next post</span>
+    </div>
+
+    <div class="col-md-7 p-r-0">
       <ul class="nav nav-pills pull-right">
         <li class="nav-item">
           <a href="{{ '/' | prepend: site.baseurl }}" class="nav-link btn btn-md btn-info">Home</a>
