--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/js/jquery.countdown.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
 </head>
