Fixed design a bit. Added some text to the latest draft

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -25,7 +25,7 @@
         {{ post.excerpt }}
 
         <div class="text-right">
-          <a class="btn btn-sm read-more" href="{{ post.url | prepend: site.baseurl }}">Read more</a>
+          <a class="btn btn-sm btn-primary read-more" href="{{ post.url | prepend: site.baseurl }}">Read more</a>
         </div>
       {% endif %}
     </div>
