--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -94,6 +94,13 @@ $background-image: url(/images/background2.png);
   }
 }
 
+.post {
+  .img-sm {
+    max-width: 100px;
+    max-height: 100px;
+  }
+}
+
 .btn.read-more {
   $read-more-btn-color: rgb(120, 161, 171);
   $read-more-btn-color-hover: rgb(73, 122, 134);
