--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,8 +10,27 @@
     <h2>Software developer</h2>
 
     <div class="col-xs-12 col-md-4">
-      <span><span id="next-post-countdown" /></span>
-      <span>until next post</span>
+      <div class="row">
+        <div class="col-xs-12">
+          Next post progress:
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="progress">
+            <!--
+              1. find an idea (progress-warning)
+              2. create a prototype (opt.) (progress-warning)
+              3. write a post (progress-info)
+              4. publish a post (progress-success)
+            -->
+            <progress class="progress progress-info" value="50" max="100" data-toggle="tooltip" data-placement="bottom" title="writing">
+              writing
+            </progress>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="col-xs-12 col-md-7 p-r-0">
