Refactored 'two sides of web application' articles

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -50,7 +50,7 @@ $background-image: url(/images/background2.png);
   }
 
   img {
-    display: block;
+    display: inline-block;
     max-width: 100%;
   }
 }
