--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,7 @@
   <script type="text/javascript" src="{{ "/js/jquery.countdown.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
+
+  <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
 </head>
