Fixed a few more posts

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -31,6 +31,11 @@ $background-image: url(/images/background2.png);
   display: inline-block;
 }
 
+.vspace {
+  min-height: 1.5em;
+  display: inline-block;
+}
+
 .post {
   background: $post-background-color;
   margin: 20px 0;
