--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -33,7 +33,7 @@ $background-image: url(/images/background2.png);
 
 .vspace {
   min-height: 1.5em;
-  display: inline-block;
+  display: block;
 }
 
 .post {
