--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 
     {% include footer.html %}
 
-    {% include google_analytics.html %}
+    {% if site.baseurl != '' %}
+        {% include google_analytics.html %}
+    {% endif %}
   </body>
 </html>
