--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 posts-wrapper">
   {% for post in paginator.posts %}
-    <div class="post" data-url="{{ post.url | prepend: site.baseurl }}">
+    <div class="post">
       <div class="title">
         <span class="timestamp label label-info pull-right hidden-md-down">
           {{ post.date | date: "%b %-d, %Y" }}
@@ -12,6 +12,8 @@
 
         {% unless post.tags contains 'quote' %}
           <h3>
+            <a class="anchor" href="{{ post.url | prepend: site.baseurl }}">#</a>
+
             {{ post.title }}
           </h3>
         {% endunless %}
