--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -104,6 +104,22 @@ $background-image: url(/images/background2.png);
     max-width: 100px;
     max-height: 100px;
   }
+
+  .title {
+    .anchor {
+      // visibility: hidden;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  &:hover {
+    .title .anchor {
+      visibility: visible;
+    }
+  }
 }
 
 .highlight {
