Fixing mobile layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,15 @@
   </div>
 
   <div class="col-md-8 col-xs-12 text">
-    <h1>Artem Szubowicz</h1>
-    <h2>Software developer</h2>
+    <div class="visible-md-up">
+      <h1>Artem Szubowicz</h1>
+      <h2>Software developer</h2>
+    </div>
+    
+    <div class="hidden-md-up text-center">
+      <h2>Artem Szubowicz</h2>
+      <h3>Software developer</h3>
+    </div>
 
     <div class="col-xs-12 col-md-7 col-md-offset-4 p-r-0">
       <ul id="main-menu" class="nav nav-pills">
