--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,15 +4,15 @@ layout: default
 
 <div class="post">
   <header class="title">
-    <span class="timestamp label label-info pull-right visible-md-up">
-      {{ page.date | date: "%b %-d, %Y" }}
-    </span>
-
-    <span class="small pull-right hidden-md-up">
-      {{ page.date | date: "%b %-d, %Y" }}
-    </span>
-
-    <h2 class="post-title">{{ page.title }}</h2>
+    <div class="col-xs-10">
+      <h2 class="post-title">{{ page.title }}</h2>
+    </div>
+    
+    <div class="col-xs-2">
+      <span class="timestamp label label-info">
+        {{ page.date | date: "%b %-d, %Y" }}
+      </span>
+    </div>
   </header>
 
   <article class="post-content">
