Fixing mobile layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-md-8 col-xs-12 text">
-    <div class="visible-md-up">
+    <div class="hidden-md-down visible-md-up">
       <h1>Artem Szubowicz</h1>
       <h2>Software developer</h2>
     </div>
