--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="post">
-  <header class="title">
+  <header class="row title">
     <div class="col-xs-10">
       <h2 class="post-title">{{ page.title }}</h2>
     </div>
