--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -49,8 +49,7 @@ $background-image: url(/images/background2.png);
 
     .timestamp {
       position: absolute;
-      right: -1px;
-      top: -1em;
+      right: 1em;
     }
   }
 
