--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,9 @@ layout: default
     <div class="col-xs-10">
       <h2 class="post-title">{{ page.title }}</h2>
     </div>
-    
+
     <div class="col-xs-2">
-      <span class="timestamp label label-info">
+      <span class="timestamp tag tag-info">
         {{ page.date | date: "%b %-d, %Y" }}
       </span>
     </div>
