--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" href="{{ site.baseurl }}/">
+  <a class="navbar-brand" href="{{ site.baseurl }}/about/">
     <img src="{{ '/images/photo.jpg' | prepend: site.baseurl }}" width="30" height="30" class="rounded d-inline-block align-top" alt="">
 
     <div class="d-inline-block nav-icon">
