--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/jquery.countdown.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/js/hammer.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
 
   <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
