--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,16 +6,12 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/public/bundle.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script type="text/javascript" src="{{ "/js/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="{{ "/js/jquery.countdown.min.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="{{ "/js/hammer.min.js" | prepend: site.baseurl }}"></script>
-  <script type="text/javascript" src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
-
   <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
   <link rel="apple-touch-icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
+
+  <script type="text/javascript" src="{{ "/public/bundle.js" | prepend: site.baseurl }}"></script>
 </head>
