--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -143,13 +143,13 @@ $background-image: url(/images/background2.png);
   border-radius: 5px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: map-get($grid-breakpoints, sm)) {
   .read-more-container {
     text-align: left;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: map-get($grid-breakpoints, sm)) {
   .read-more-container {
     text-align: right;
   }
@@ -263,4 +263,16 @@ figure > pre {
 
 .nav-icon {
   font-size: 0.5em;
+}
+
+@media (min-width: map-get($grid-breakpoints, xs)) {
+  .container {
+    width: 95%;
+    max-width: 100%;
+  }
+
+  nav.navbar .navbar-nav {
+    display: flex;
+    justify-content: space-around;
+  }
 }
