--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,16 +3,12 @@ layout: default
 ---
 
 <div class="post">
-  <header class="row title">
-    <div class="col-xs-10">
-      <h2 class="post-title">{{ page.title }}</h2>
-    </div>
+  <header class="title">
+    <h2 class="post-title">{{ page.title }}</h2>
 
-    <div class="col-xs-2">
-      <span class="timestamp tag tag-info">
-        {{ page.date | date: "%b %-d, %Y" }}
-      </span>
-    </div>
+    <span class="timestamp tag tag-info">
+      {{ page.date | date: "%b %-d, %Y" }}
+    </span>
   </header>
 
   <article class="post-content">
