--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ $background-color: #F67646;
 $post-background-color: #FFFFFF;
 $page-content-background: #F0EEE6;
 $brand-color:      #2a7ae2;
+$theme-color:      #32a571;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
