--- a/css/about.scss
+++ b/css/about.scss
@@ -4,7 +4,6 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-  "syntax-highlighting",
   "custom",
-  "post"
+  "gallery"
 ;
