--- a/css/contact.scss
+++ b/css/contact.scss
@@ -4,7 +4,7 @@
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-  "syntax-highlighting",
   "custom",
-  "post"
+  "forms",
+  "buttons"
 ;
