--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light bg-faded">
   <a class="navbar-brand hidden-sm-down" href="{{ site.baseurl }}/about/">
-    <img src="{{ '/images/photo.jpg' | prepend: site.baseurl }}" width="30" height="30" class="rounded d-inline-block align-top" alt="">
+    <img src="{{ '/images/photo-compressed.jpg' | prepend: site.baseurl }}" width="30" height="30" class="rounded d-inline-block align-top" alt="">
 
     <div class="d-inline-block nav-icon">
       <div>Artem Shoobovych</div>
