--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@ layout: compress
     {% include head.html %}
 
     <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
-    <script type="text/javascript" src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ '/js/custom.js' | prepend: site.baseurl }}" async></script>
   </head>
 
   <body>
