--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,15 +14,15 @@ layout: compress
     {% include header.html %}
 
     <div class="container main-container">
-      <div class="post">
-        <header class="post-header">
+      <section class="post">
+        <div class="post-header">
           <h1 class="post-title">{{ page.title }}</h1>
-        </header>
+        </div>
 
-        <article class="post-content">
+        <div class="post-content">
           {{ content }}
-        </article>
-      </div>
+        </div>
+      </section>
     </div>
 
     {% include google_analytics.html %}
