--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,5 +8,5 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-<link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
-<link rel="apple-touch-icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
+<link rel="shortcut icon" href="{{ "/images/favicon-compressed.png" | prepend: site.baseurl }}">
+<link rel="apple-touch-icon" href="{{ "/images/favicon-compressed.png" | prepend: site.baseurl }}">
